[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.8.3"
cbc = "0.1.2"
hex-literal = "0.4.1"
pbkdf2 = "0.12.1"
sha2 = "0.10.7"
wasm-bindgen = "0.2"
